[gd_scene load_steps=5 format=2]

[ext_resource path="res://scenes/ball/Dust Particle.png" type="Texture" id=1]
[ext_resource path="res://scenes/ball/ball_k.gd" type="Script" id=2]
[ext_resource path="res://sounds/brick_sounds/cannon_sounds/shot.wav" type="AudioStream" id=3]

[sub_resource type="CircleShape2D" id=1]
radius = 8.0

[node name="ball_k" type="KinematicBody2D"]
collision_mask = 2
script = ExtResource( 2 )
ball_life = 60

[node name="Sprite" type="Sprite" parent="."]
scale = Vector2( 2, 2 )
texture = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="RayCast2D" type="RayCast2D" parent="."]
enabled = true
collision_mask = 2

[node name="Timer" type="Timer" parent="."]
one_shot = true

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 3 )

[node name="Timer2" type="Timer" parent="."]
one_shot = true

[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
[connection signal="timeout" from="Timer2" to="." method="_on_Timer2_timeout"]
